--- a/exercise2/todo.txt
+++ b/exercise2/todo.txt
@@ -1,3 +1,5 @@
-need to variablize k8s
-make psql flexible
-private endpoints 
+Plan of action:
+k8s with no ingress and manual installation
+k8s with container registry
+k8s with auto installation
+k8s with ingress and cert
