--- a/exercise2/todo.txt
+++ b/exercise2/todo.txt
@@ -1,13 +1,7 @@
 Plan of action:
-k8s with no ingress and manual installation
-k8s with container registry
-k8s with auto installation
 
-postgres connectivity
-redis connectivity
-gitlab enterprise configuration
-
-k8s with ingress and cert
+work on private endpoint for psql 
+helm with tls
 
 helm repo add gitlab https://charts.gitlab.io/
 helm repo update
